Tentando aplicar o localstorage corretamente

--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,11 @@
 #bordas-tabela{
     border-style: solid;
 }
+
+.botao_coletar {
+    display: inline;
+}
+
+.tamanho_campo_principal {
+    width: 40px;
+}
